--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ p {font-size: 11pt;}
 h3 {font-size: 8pt; color: #829AB1; margin-bottom: -10px; text-transform: uppercase; letter-spacing: 1px;}
 
 .post {
-padding: 0 2%;
+padding: 0px 15px;
 margin: 20px 0px 20px;
 border: 1px solid #829AB1;
 border-radius: 15px;
